# trading-platform-pp

./: .gitignore  CMakeLists.txt  README.md  linear_regression_strategy.cpp  strategy.cpp  watchlist_widget.cpp  watchlist_widget.h  watchlist_widget.ui
.github/workflows/: main.yml
Graph/: f_x_y.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
backtest-environment/: .gitignore  README.md
backtest-environment/DataHandling/: MarketDataFrame.cpp  YahooFinanceCSVReader.cpp  cookies.txt  crumb.txt
backtest-environment/Graphics/: gnuplotter.cpp  montecarlo.cpp
backtest-environment/Strategies/: strat_ema.cpp  strat_ema_improved.cpp  strat_linear_regression.cpp  strat_mom.cpp  strat_pairstrading.cpp  strat_sma.cpp  strategiesheader.hpp
build-tests-Desktop_Qt_5_12_9_GCC_64bit-Profile/: Makefile  target_wrapper.sh  tests  tests.debug  tst_api.moc  tst_stock.moc
docs/: formatter-setup.md
docs/build-guide/: ubuntu.md  windows.md
helper/: QJsonObjectManipulation.h
reports/: Week 1
scripts/: build.sh  run.sh
src/: application.qrc  main.cpp  style.astylerc  tests.pro  trading-platform-pp.pro
src/api/: CMakeLists.txt  api.cpp  api.h  integration.cpp
src/components/: news.cpp  news.h  portfolio.cpp  portfolio.h  session.cpp  session.h  stock.cpp  stock.h  trading_order.cpp  trading_order.h
src/gui/: chooseportfolio.cpp  chooseportfolio.h  chooseportfolio.ui  chooseuser.cpp  chooseuser.h  chooseuser.ui  companynewscard.cpp  companynewscard.h  companynewscard.ui  homepage.cpp  homepage.h  homepage.ui  leftnavigationbar.cpp  leftnavigationbar.h  leftnavigationbar.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  neworder.cpp  neworder.h  neworder.ui  newscard.cpp  newscard.h  newscard.ui  newspage.cpp  newspage.h  newspage.ui  nodatapage.cpp  (+34 more)
tests/: tests.pro  tst_api.cpp  tst_stock.cpp
(+52 files in other folders)
